# hermes-agent-desktop

./: BUILD_GUIDE.md  GITHUB_SETUP_GUIDE.md  PROJECT_SUMMARY.md  README.md  package-lock.json  package.json  upload-to-github.ps1
.github/workflows/: build.yml  generate-keys.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/file_processor/: image_recognition.rs  mod.rs  ocr.rs  video_analysis.rs
src-tauri/src/model_router/: mod.rs  ollama.rs  openai.rs  router.rs  types.rs
src/components/: index.ts
src/components/Chat/: ChatInterface.css  ChatInterface.tsx  ChatMessage.css  ChatMessage.tsx
src/components/FileUploader/: FileUploader.css  FileUploader.tsx
src/components/ModelSelector/: ModelSelector.css  ModelSelector.tsx
src/stores/: chatStore.ts  modelStore.ts
